--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,3 +45,9 @@ code {
 	text-decoration: none;
 	border-bottom: 2px solid #0056b3;
 }
+
+.blockquote {
+	border-left: 3px solid #555;
+	margin: 3em;
+	padding-left: 2em;
+}
